[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["RoaaMustafa <labushanab14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.1.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
